--- a/mogo-apps-ios/create-goals/CreateGoals.storyboard
+++ b/mogo-apps-ios/create-goals/CreateGoals.storyboard
@@ -433,6 +433,12 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Create Goal" id="txT-cr-8AD">
+                        <barButtonItem key="leftBarButtonItem" title="Item" image="chevron.backward" catalog="system" style="done" id="44p-RP-YfN">
+                            <color key="tintColor" red="0.086274509799999996" green="0.47450980390000003" blue="0.43137254899999999" alpha="1" colorSpace="calibratedRGB"/>
+                            <connections>
+                                <action selector="backButton:" destination="TN3-2I-tlw" id="ha2-h9-O8D"/>
+                            </connections>
+                        </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" style="plain" systemItem="save" id="YEE-vD-jr3">
                             <color key="tintColor" red="0.086274509799999996" green="0.47450980390000003" blue="0.43137254899999999" alpha="1" colorSpace="calibratedRGB"/>
                             <connections>
@@ -506,6 +512,7 @@
     </scenes>
     <resources>
         <image name="Unlock" width="20" height="19"/>
+        <image name="chevron.backward" catalog="system" width="96" height="128"/>
         <image name="cool" width="512" height="512"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
