Fix Withdraw Alert

--- a/mogo-apps-ios/goal-detail/GoalDetail.storyboard
+++ b/mogo-apps-ios/goal-detail/GoalDetail.storyboard
@@ -512,7 +512,7 @@
         <!--withdraw-->
         <scene sceneID="emX-6A-SmD">
             <objects>
-                <viewControllerPlaceholder storyboardName="withdraw" id="cMX-tb-WWO" sceneMemberID="viewController"/>
+                <viewControllerPlaceholder storyboardIdentifier="withdrawIdentifier" storyboardName="withdraw" id="cMX-tb-WWO" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="8yr-Gi-R8g" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="805" y="190"/>
