--- a/mogo-apps-ios/goal-detail/GoalDetail.storyboard
+++ b/mogo-apps-ios/goal-detail/GoalDetail.storyboard
@@ -456,7 +456,7 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Goal Detail" id="7WI-xF-mf5">
-                        <barButtonItem key="leftBarButtonItem" title="&lt;" id="wHE-WU-rW1">
+                        <barButtonItem key="leftBarButtonItem" image="chevron.backward" catalog="system" style="done" id="wHE-WU-rW1">
                             <color key="tintColor" red="0.086274509803921567" green="0.47450980392156861" blue="0.43137254901960786" alpha="1" colorSpace="calibratedRGB"/>
                             <connections>
                                 <action selector="backButton:" destination="tQt-9S-hGW" id="zhM-mb-h2W"/>
@@ -537,6 +537,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="chevron.backward" catalog="system" width="96" height="128"/>
         <image name="chevron.right" catalog="system" width="96" height="128"/>
         <image name="iphone" catalog="system" width="108" height="128"/>
         <systemColor name="systemBackgroundColor">
